--- a/ingress.yaml
+++ b/ingress.yaml
@@ -1,17 +1,8 @@
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
-  name: ingress
+  name: mypressgress
 spec:
-  tls:
-  - hosts:
-    - www.uzbozor.com
-    secretName: secret
-  rules:
-  - host: www.uzbozor.com
-    http:
-      paths:
-      - path: /var/www/html
-        backend:
-          serviceName: wordpress
-          servicePort: 80
+  backend:
+    serviceName: wordpress
+    servicePort: 80
