--- a/wordpress-depl.yml
+++ b/wordpress-depl.yml
@@ -10,7 +10,7 @@ spec:
   selector:
     app: wordpress
     tier: frontend
-  type: NodePort
+  type: ClusterIP
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
